# rotki

./: Makefile  kraken_error.py  requirements.txt  requirements_dev.txt
.github/workflows/: rotki_ci.yml  rotki_release.yaml  task_backend_tests.yml
colibri/: Cargo.toml
colibri/src/: main.rs
colibri/src/db/: handler.rs  mod.rs  tasks.rs
docs/: api.rst  changelog.rst  websockets.rst
frontend/: package-lock.json
rotkehlchen/: icons.py  inquirer.py  interfaces.py  rotkehlchen.py  server.py  typing.py
rotkehlchen/accounting/: accountant.py  constants.py  events.py  pnl.py  structures.py  typing.py
rotkehlchen/api/: rest.py  server.py
rotkehlchen/assets/: asset.py  converters.py  resolver.py  spam_assets.py  typing.py  utils.py
rotkehlchen/async_db/: better.py  db_writter.py  handler.py  server.py
rotkehlchen/balances/: manual.py
rotkehlchen/chain/: balances.py  manager.py
rotkehlchen/constants/: assets.py  assets.py.template  ethereum.py  resolver.py
rotkehlchen/data/: all_assets.json  convex_data.json  eth_contracts.json  global.db  importer.py
rotkehlchen/db/: dbhandler.py  eth2.py  ethtx.py  filtering.py  loopring.py  schema.py  settings.py  updates.py  utils.py
rotkehlchen/exchanges/: data_structures.py  ftx.py  kraken.py
rotkehlchen/externalapis/: beaconchain.py  coingecko.py  covalent.py  cryptocompare.py  etherscan.py  opensea.py  trueblocks.py
rotkehlchen/globaldb/: handler.py  schema.py  updates.py
rotkehlchen/grpc/: server.py  sql_service.proto  sql_service_pb2.py  sql_service_pb2_grpc.py
rotkehlchen/history/: events.py
(+207 files in other folders)
