[package]
name = "colibri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["sqlcipher", "blob"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.107"
simple-error = "0.3"
serde_rusqlite = "0.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"  # manage blobs